# COGITAO

./: .gitignore  README.md  convert_h5_to_hf_dataset.py  create_HF_datasets.slurm  demo.ipynb  generate_experiment_data.py  generate_experiment_data_parallel.py  generate_positionned_objects.ipynb  generator.py  pyproject.toml  sequential_cogitao.ipynb
LLM_Experiments/: llm_experiment_splits.py  llm_experiments.py  llm_experiments_utils.py
LLM_Experiments/llm_results/: anthropic_claude-sonnet-4.5_llm_experiment_results.csv  google_gemini-3-pro-preview_llm_experiment_results.csv  openai_gpt-4.1-mini_llm_experiment_results.csv  openai_o3_llm_experiment_results.csv  summary_table_object_accuracies.csv  (+3 more)
arcworld/: __init__.py  general_utils.py  generator.py  hdf5_utils.py  metrics.py  types.py
arcworld/config/: __init__.py  (+2 more)
deprecated/: check_all_is_well.ipynb  dev.ipynb  huggingface_uploader.ipynb  paper_plots.ipynb  test_paired_generation.py
experiment_configs/: c0.py  c4.py  compgen.py  compgen_basics.py  compgen_basics_ktroyan.py  compgen_ktroyan.py  compositionality.py  compositionality_gridsize.py  entry.py  generalization.py  sample_efficiency.py  test_config_for_klim.py
supplementary_material_experiments/: create_task_number_splits.ipynb  depth_scaling_analysis.ipynb  depth_scaling_config.py  new_metric.ipynb  run_depth_scaling.py
tests/: conftest.py  test_conditionals.py  test_dataloader.py  test_dataset.py  test_error_handling.py  test_generator.py  test_metrics.py  test_shapes.py  test_transformations.py  test_transforms.py
utils/: config_validation.py
(+39 files in other folders)
